--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -5,5 +5,5 @@ $navbar-bg-pressed: #2f404e;
 $pink: #ff3366;
 $finish-blue: #20a4f3;
 $arrow-green: #2ec4b6;
-$main-bg: #205f93;
+$main-bg: #bbddfa;
 $canvas-bg: #deebf2;
