Editor toolbar graphics

--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -2,7 +2,7 @@ $navbar-bg: #011627;
 $navbar-text: #f6f7f8;
 $navbar-bg-highlight: #182b3a;
 $navbar-bg-pressed: #2f404e;
-$pink: #ff3366;
+$pink: #ff83a2;
 $finish-blue: #20a4f3;
 $arrow-green: #2ec4b6;
 $main-bg: #bbddfa;
