--- a/app/styles/editor.scss
+++ b/app/styles/editor.scss
@@ -8,6 +8,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100%;
+    background-color: $main-bg;
     .pure-menu {
         flex: 0 0 auto;
         background-color: $navbar-bg;
@@ -56,8 +57,9 @@ body {
     .main {
         flex: 1 1 auto;
         display: flex;
+        align-self: center;
         align-items: center;
-        background-color: $main-bg;
+        justify-content: center;
         canvas {
             width: 200px;
             height: 80px;
@@ -65,6 +67,66 @@ body {
             border: 1px solid black;
             background-color: $canvas-bg;
         }
+        .controls {
+            display: flex;
+            flex-direction: column;
+            margin-right: 10px;
+            button {
+                width: 100px;
+                height: 100px;
+                background-color: $navbar-text;
+                border: 1px solid $navbar-bg;
+                background-size: 80%;
+                background-repeat: no-repeat;
+                background-position: center;
+                &.active {
+                    border: 2px solid $finish-blue;
+                    background-color: $canvas-bg;
+                }
+                &#walls {
+                    background-image: url('/images/wall.png');
+                }
+                &#finish {
+                    background-image: url('/images/finish.png');
+                }
+                &#robot {
+                    &.right {
+                        background-image: url('/images/robot_r.png');
+                    }
+                    &.left {
+                        background-image: url('/images/robot_l.png');
+                    }
+                    &.up {
+                        background-image: url('/images/robot_u.png');
+                    }
+                    &.down {
+                        background-image: url('/images/robot_d.png');
+                    }
+                    &-right {
+                        background-image: url('/images/arrow_r.png');
+                    }
+                    &-left {
+                        background-image: url('/images/arrow_l.png');
+                    }
+                    &-up {
+                        background-image: url('/images/arrow_u.png');
+                    }
+                    &-down {
+                        background-image: url('/images/arrow_d.png');
+                    }
+                }
+            }
+            &-robot {
+                width: 100px;
+                height: 100px;
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                button {
+                    width: 50px;
+                    height: 50px;
+                }
+            }
+        }
     }
 }
-
