--- a/app/styles/editor.scss
+++ b/app/styles/editor.scss
@@ -36,8 +36,10 @@ body {
         &-children {
             background-color: $navbar-bg-highlight;
             color: $navbar-text;
+            padding: 0 0.4em;
             .pure-menu-item {
                 display: flex;
+                margin: 0.4em 0;
                 label {
                     flex: 1 1 auto;
                     padding: 0.2em 0.8em 0.2em 0.4em;
