--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -4,6 +4,9 @@ $navbar-bg-highlight: #182b3a;
 $navbar-bg-pressed: #2f404e;
 $pink: #ff83a2;
 $finish-blue: #20a4f3;
-$arrow-green: #2ec4b6;
+$solve-bg: #39b54a;
+$solve-bg-highlight: #5dc26a;
+$solve-bg-bad: #f72c25;
+$solve-bg-bad-highlight: #f8524c;
 $main-bg: #bbddfa;
 $canvas-bg: #deebf2;
