--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -6,7 +6,7 @@ $pink: #ff83a2;
 $finish-blue: #20a4f3;
 $solve-bg: #39b54a;
 $solve-bg-highlight: #5dc26a;
-$solve-bg-bad: #f72c25;
-$solve-bg-bad-highlight: #f8524c;
+$button-bg-bad: #f72c25;
+$button-bg-bad-highlight: #f8524c;
 $main-bg: #bbddfa;
 $canvas-bg: #deebf2;
