--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -33,12 +33,24 @@ body {
             &:focus, &:active {
                 background-color: $navbar-bg-pressed;
             }
+            &.bad {
+                background-color: $button-bg-bad;
+                &:hover, &:focus, &:active {
+                    background-color: $button-bg-bad-highlight;
+                }
+            }
         }
         &-active {
             .pure-menu-link {
                 background-color: $navbar-bg-highlight;
                 &:hover, &:focus, &:active {
                     background-color: $navbar-bg-pressed;
+                }
+                &.bad {
+                    background-color: $button-bg-bad;
+                    &:hover, &:focus, &:active {
+                        background-color: $button-bg-bad-highlight;
+                    }
                 }
             }
         }
