--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -104,7 +104,7 @@ body {
             display: flex;
             flex-direction: column;
             margin-right: 10px;
-            button {
+            .control {
                 width: 100px;
                 height: 100px;
                 background-color: $navbar-text;
@@ -112,6 +112,7 @@ body {
                 background-size: 80%;
                 background-repeat: no-repeat;
                 background-position: center;
+                box-sizing: border-box;
                 &.active {
                     border: 2px solid $finish-blue;
                     background-color: $canvas-bg;
@@ -131,16 +132,9 @@ body {
                     }
                 }
             }
-            &-robot {
-                width: 100px;
-                height: 100px;
-                display: flex;
-                flex-direction: row;
-                flex-wrap: wrap;
-                button {
-                    width: 50px;
-                    height: 50px;
-                }
+            &-robot .control {
+                width: 50px;
+                height: 50px;
             }
         }
     }
