--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,7 @@
 @import "/libs/pure.min.css";
 @import "variables";
 @import "editor";
+@import "play";
 
 html {
     height: 100%;
@@ -150,13 +151,13 @@ body {
         border-top-right-radius: 20px;
         display: flex;
         align-items: center;
+        flex-direction: column;
+        justify-items: center;
         &.hidden {
             display: none;
         }
         span {
-            font-size: 4em;
             text-align: center;
-            flex: 1;
         }
     }
 }
