--- a/app/styles/_play.scss
+++ b/app/styles/_play.scss
@@ -11,4 +11,14 @@ body.play {
             margin: 0.5em 0;
         }
     }
+    .main .controls .control {
+        width: 50px;
+        height: 50px;
+        &#start {
+            background-image: url('/images/start.png');
+        }
+        &#stop {
+            background-image: url('/images/stop.png');
+        }
+    }
 }
